# bootcamp

./: .gitignore  README.md  pyproject.toml
basics/: README.md
basics/ex-basics-1/: README.md  pyproject.toml
basics/ex-basics-1/geetha_hello/: hello.py
basics/ex-basics-2/: README.md  pyproject.toml
basics/ex-basics-2/geetha_hello/: hello.py
basics/ex-basics-3/: README.md  pyproject.toml
dataflow-framework/: FINAL.md
dataflow-framework/abstraction-level-0/: README.md
dataflow-framework/abstraction-level-1/: .env  README.md  input.md  out.md
dataflow-framework/abstraction-level-2/: .env  README.md  input.txt  output.txt
dataflow-framework/abstraction-level-3/: pipeline.py
dataflow-framework/abstraction-level-3/processors/: snake.py  upper.py
dataflow-framework/abstraction-level-4/: README.md  output.txt
dataflow-framework/abstraction-level-5/: cli.py  pipeline.yaml  processor_types.py
dataflow-framework/abstraction-level-5/processors/: counter.py  tally.py  trim.py
dataflow-framework/abstraction-level-6/: config.yaml  requirements.txt
dataflow-framework/abstraction-level-6/ab6/: config_loader.py
dataflow-framework/abstraction-level-7/: README.md  cli.py  requirements.txt
dataflow-framework/abstraction-level-7/config/: pipeline.yaml
dataflow-framework/abstraction-level-7/core/: types.py
dataflow-framework/abstraction-level-7/dashboard/: server.py
dataflow-framework/abstraction-level-8/: cli.py  requirements.txt
dataflow-framework/final-project-wrap-up/: Dockerfile  Makefile  docker-compose.yml
days/dataflow-framework/: FINAL.md
days/dataflow-framework/file-processing-sys/: Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
days/dataflow-framework/file-processing-sys/src/: main.py
days/dataflow-framework/file-processing-sys/src/app/: cli.py  file_watcher.py  main.py
days/dataflow-framework/file-processing-sys/src/app/config/: pipeline.yaml
days/dataflow-framework/file-processing-sys/src/app/core/: engine.py
days/dataflow-framework/file-processing-sys/src/app/dashboard/: server.py
days/dataflow-framework/file-processing-sys/src/app/engine/: runner.py
days/dataflow-framework/file-processing-sys/src/app/processors/: filters.py  formatters.py  output.py  start.py
days/dataflow-framework/file-processing-sys/src/app/utils/: metrics.py  tracing.py
days/dataflow-framework/file-processing-sys/src/core/: engine.py
days/dataflow-framework/file-processing-sys/src/utils/: tracing.py
days/dataflow-framework/file-processing-sys/src/watch_dir/processed/: sample.txt
days/dataflow-framework/file-processing-sys/watch_dir/processed/: sample.txt
days/day0/: README.md  pyproject.toml
days/day0-hello/: README.md  main.py  pyproject.toml
days/day0-hello/src/geetha_hello/: hello.py
days/day0/src/geetha_hello/: cli.py  config_loader.py  hello.py
days/day1/: README.md  daily-log.md  mkdocs.yml
days/day2/section-7/ex-5/: pyproject.toml
doctools/: README.md
doctools/capstone/: README.md  published-site-link.txt  pyproject.toml
doctools/capstone/src/passcheck/: checker.py
doctools/capstone/tests/: test_checker.py
doctools/docs/: block-diagram.md  design.md  index.md  sequence.md
figure-captions-extraction/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run_api.py  settings.yaml  test.txt  watcher.py
figure-captions-extraction/api/: auth.py  models.py  routes.py
figure-captions-extraction/api/static/css/: style.css
figure-captions-extraction/api/static/js/: dashboard.js
figure-captions-extraction/api/templates/: index.html
figure-captions-extraction/cli/: api_cli.py  cli.py
figure-captions-extraction/config/: config.py
figure-captions-extraction/docs/: design_document.md  implementation_details.md  implementation_plan.md  operationalization.md  project_summary.md
figure-captions-extraction/ingestion/: base.py  id_converter.py  paper_processor.py  pmc_ingestor.py  pubtator_client.py
figure-captions-extraction/models/: paper.py
figure-captions-extraction/processing/: base.py  caption_cleaner.py  entity_mapper.py
figure-captions-extraction/scripts/: inspect_db.py
figure-captions-extraction/storage/: base.py  duckdb_backend.py  schema.sql
figure-captions-extraction/tests/: test_db_init.py  test_ingest.py  test_models.py
figure-captions-extraction/utils/: export.py  file_utils.py  logging.py
figure-captions-extraction/watched_dir/processed/: sample_papers.txt
persistence-drills/: README.md  questions.md
persistence-drills/file_based/: 02_pickle_deserialization.py  04_json_deserialization.py  05_yaml_serialization.py  07_custom_graph_serialization.py  08_skip_attributes_serialization.py  09_game_state_restore.py  10_versioned_serialization.py  11_custom_collection_serialization.py  12_cyclic_references.py  book_v1.pkl  car.yaml  cyclic_people.pkl  game_save.pkl  my_collection.pkl
persistence-drills/levelup-drills/: 01_schema_migration.py  02_model_boundary_enforcement.py  03_idempotent_upserts.py  04_versioned_data_storage.py  05_concurrency_handling.py  06_large_binary_data.py  07_schema_vs_code_first.py  08_soft_deletes.py  09_large_dataset_testing.py  example.db  reflections.md
persistence-drills/sqlalchemy_pydantic/: 01_basic_model.py  02_insert_user.py  03_fetch_users.py  04_filtering.py  05_update_user.py  06_delete_user.py  07_user_post_relationship.py  08_nested_response.py  09_bulk_insert_transaction.py  10_async_sqlalchemy.py  users.db  users_and_posts.db
(+363 files in other folders)
