[project]
name = "passcheck"
version = "0.1.0"
description = "A CLI tool to check password strength"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["typer", "rich"]
requires-python = ">=3.8"

[project.scripts]
passcheck = "passcheck.checker:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
