[project]
name = "file-processing-sys"
version = "0.1.0"
description = "A real-time file processing system with FastAPI and CLI."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "typer",
    "pydantic",
    "rich",
    "networkx",
    "watchdog",
    "pyyaml"
]

[project.scripts]
fpsys = "file_processing_sys.cli:app"  # This defines the CLI entry point for the project

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"  # Specifies the build backend to be used

[tool.setuptools.packages.find]
where = ["src"]  # Specifies the location of your source code (src/)

# This section is now required for packaging purposes
[tool.setuptools]
package-dir = {"" = "src"}  # Direct setuptools to look inside the 'src' folder for packages
include-package-data = true  # Make sure non-Python files are included (via MANIFEST.in)
