[project]
name = "mypkg"
version = "0.1.0"
description = "A sample CLI package"
authors = [{ name = "Geetha", email = "geetharuttala0106@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
mytool = "mypkg.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
